Fixed projects on mobile

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -61,7 +61,7 @@
 }
 
 .navigation-projects-dropdown{
-    display: inline-block;
+    display: flex;
     align-items: center;
     background-color: transparent;
     border: none;
@@ -134,6 +134,10 @@
 }
 
 @media screen and (max-width: 1000px){
+
+    .navigation-name{
+        height: 25%;
+    }
  
     .show-mobile-navigation{
         display: flex !important;
@@ -143,7 +147,7 @@
     }
 
     .navigation-content{
-        width: 80%;
+        width: 90%;
     }
 
     .navigation-menu{
@@ -151,7 +155,6 @@
     }
   
     .navigation-projects-dropdown{
-        width: 100%;
         max-width: 500px;
     }
 
